--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "typescript": "~5.4.3"
   },
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "axios-retry": "^4.4.1"
   },
   "engines": {
     "node": ">=22.0.0"
