--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "axios-retry": "^4.4.1"
+    "axios-retry": "^4.4.1",
+    "bottleneck": "^2.19.5"
   },
   "engines": {
     "node": ">=22.0.0"
